--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hey, world.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>an0n | The One Eleven project</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <h1>One Eleven</h1>
+    <p>A (mostly) generative art experiment/peridoical.</p>
+</body>
+</html>
