--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>One Eleven</h1>
-    <p>A (mostly) generative art experiment/peridoical.</p>
+    <h1>One Eleven (etc.) by an0n.tez</h1>
+    <p>A (mostly) generative art experiment/periodical.</p>
+    <h2>Art ordered reverse chronologically</h2>
+    <p>One Eleven (Defaced): <a href="https://www.fxhash.xyz/generative/13284">Project #13284 on FXHash</a>.</p>
+    <p>One Eleven: <a href="https://www.fxhash.xyz/generative/12743">Project #12743 on FXHash</a>.</p>
+    <p>Other works: <a href="https://objkt.com/explore/tokens/1?faContracts=KT19s5bZX56LdfU2g2PxwMQrP83PxHfFHQET&sort=timestamp:desc">ART on objkt</a>.</p>
 </body>
 </html>
