--- a/sdk/index.html
+++ b/sdk/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>One Eleven (SDK) by an0n.tez</h1>
     <p>More of a library than an SDK, but SDK sounds more official.</p>
-    <p>Documentation/Examples coming soon, but the template can be found on <a href="https://github.com/an0n-tez/fxhash-webpack-boilerplate-one-eleven">github</a>.</p>
+    <p>Documentation/Examples coming soon, but the SDK (fxhash template) can be found on <a href="https://github.com/an0n-tez/fxhash-webpack-boilerplate-one-eleven">github</a>.</p>
     <h2>Etc...</h2>
     <p>Return to <a href="/">Project Home</a>.</p>
 </body>
