--- a/sdk/index.html
+++ b/sdk/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h1>One Eleven (SDK) by an0n.tez</h1>
-    <p>More of a library than an SDK, but SDK sounds more official.</p>
-    <p>Documentation/Examples coming soon, but the SDK (fxhash template) can be found on <a href="https://github.com/an0n-tez/fxhash-webpack-boilerplate-one-eleven">github</a>.</p>
+    <p>More of a library or fxhash template than an SDK, but SDK sounds more official and is great for short urls.</p>
+    <p>Documentation/Examples coming soon, but for now, it can be <a href="https://github.com/an0n-tez/fxhash-webpack-boilerplate-one-eleven">found on github</a>.</p>
     <h2>Etc...</h2>
     <p>Return to <a href="/">Project Home</a>.</p>
 </body>
