--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>One Eleven (etc.) by an0n.tez</h1>
     <p>A (mostly) generative art experiment/periodical. All work is <a href="https://creativecommons.org/share-your-work/public-domain/cc0/">CC0</a>, which means that it is public domain and you may do what you like with it. You don't need to attribute us or anyone else, but feel free to tag <a href="https://twitter.com/an0n_tez">@an0n_tez</a> on twitter because we're curious.</p>
     <p>Feel free to follow <a href="https://twitter.com/an0n_tez">that account</a> too, it will be more up-to-date than this website.</p>
-    <p>There is an <a href="/sdk">SDK/FXHash template</a> available to make it easy to embed One Eleven into your project.</a>
+    <p>There is an <a href="/sdk">SDK/FXHash template</a> available to make it easy to embed One Eleven into a project.</a>
     <h2>Art ordered reverse chronologically</h2>
     <p>One Eleven (Defaced): <a href="https://www.fxhash.xyz/generative/13284">Project #13284 on FXHash</a>.</p>
     <p>One Eleven: <a href="https://www.fxhash.xyz/generative/12743">Project #12743 on FXHash</a>.</p>
