--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <h1>One Eleven (etc.) by an0n.tez</h1>
-    <p>A (mostly) generative art experiment/periodical. All work is <a href="https://creativecommons.org/share-your-work/public-domain/cc0/">CC0</a>, which means that it is public domain and you may do what you like with it. You don't need to attribute us or anyone else, but feel free to tag <a href="https://twitter.com/an0n_tez">@an0n_tez</a> on twitter because we're curious.</p>
+    <p>A (mostly) generative art experiment/periodical.</p>
+    <p>All work is <a href="https://creativecommons.org/share-your-work/public-domain/cc0/">CC0</a>, which means that it is public domain and you may do what you like with it. You don't need to attribute us or anyone else, but please tag <a href="https://twitter.com/an0n_tez">@an0n_tez</a> on twitter because we're curious.</p>
     <p>Feel free to follow <a href="https://twitter.com/an0n_tez">that account</a> too, it will be more up-to-date than this website.</p>
     <p>There is an <a href="/sdk">SDK/FXHash template</a> available to make it easy to embed One Eleven into a project.</a>
     <h2>Official One Eleven releases (reverse chronologically)</h2>
