--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
     <h1>One Eleven (etc.) by an0n.tez</h1>
     <p>A (mostly) generative art experiment/periodical.</p>
-    <p>All work is <a href="https://creativecommons.org/share-your-work/public-domain/cc0/">CC0</a>, which means that it is public domain and you may do what you like with it. You don't need to attribute us or anyone else, but please tag <a href="https://twitter.com/an0n_tez">@an0n_tez</a> on twitter because we're curious.</p>
-    <p>Feel free to follow <a href="https://twitter.com/an0n_tez">that account</a> too, it will be more up-to-date than this website.</p>
+    <p>All work is <a href="https://creativecommons.org/share-your-work/public-domain/cc0/" target="_blank">CC0</a>, which means that it is public domain and you may do what you like with it. You don't need to attribute us or anyone else, but please tag <a href="https://twitter.com/an0n_tez" target="_blank">@an0n_tez</a> on twitter because we're curious.</p>
+    <p>Feel free to follow <a href="https://twitter.com/an0n_tez" target="_blank">that account</a> too, it will be more up-to-date than this website.</p>
     <p>There is an <a href="/sdk">SDK/FXHash template</a> available to make it easy to embed One Eleven into a project.</p>
     <p>&nbsp;</p>
     <h2>Official One Eleven releases (reverse chronologically)</h2>
-    <p>One Eleven (Landscape/Landfill): <a href="https://www.fxhash.xyz/generative/13830">Project #13830 on FXHash</a>.</p>
-    <p>One Eleven (Defaced): <a href="https://www.fxhash.xyz/generative/13284">Project #13284 on FXHash</a>.</p>
-    <p>One Eleven: <a href="https://www.fxhash.xyz/generative/12743">Project #12743 on FXHash</a>.</p>
-    <p>Other works: <a href="https://objkt.com/explore/tokens/1?faContracts=KT19s5bZX56LdfU2g2PxwMQrP83PxHfFHQET&sort=timestamp:desc">ART on objkt</a>.</p>
+    <p>One Eleven (Landscape/Landfill): <a href="https://www.fxhash.xyz/generative/13830" target="_blank">Project #13830 on FXHash</a>.</p>
+    <p>One Eleven (Defaced): <a href="https://www.fxhash.xyz/generative/13284" target="_blank">Project #13284 on FXHash</a>.</p>
+    <p>One Eleven: <a href="https://www.fxhash.xyz/generative/12743" target="_blank">Project #12743 on FXHash</a>.</p>
+    <p>Other works: <a href="https://objkt.com/explore/tokens/1?faContracts=KT19s5bZX56LdfU2g2PxwMQrP83PxHfFHQET&sort=timestamp:desc" target="_blank">ART on objkt</a>.</p>
 </body>
 </html>
