--- a/sdk/index.html
+++ b/sdk/index.html
@@ -10,7 +10,7 @@
     <p>One Eleven (and all canonical installments) are <a href="https://creativecommons.org/share-your-work/public-domain/cc0/" target="_blank">CC0</a>, which means they are public domain and available for anyone to use, with or without attribution.</p>
     <p>This SDK makes it really easy for you to bootstrap a fxhash project to use the One Eleven signature piece in another generative work.</p>
     <p>Documentation/Examples coming soon, but for now, it can be <a href="https://github.com/an0n-tez/fxhash-webpack-boilerplate-one-eleven" target="_blank">found on github</a>.</p>
-    <p>An example of a project using the SDK is <a href="https://www.fxhash.xyz/generative/13830">One Eleven (Landscape/Landfill)</a>.</p>
+    <p>An example of a project using the SDK is <a href="https://www.fxhash.xyz/generative/13830" target="_blank">One Eleven (Landscape/Landfill)</a>.</p>
     <p>The unobfuscated source code for (Landscape/Landfill) is also in the github project in the <a href="https://github.com/an0n-tez/fxhash-webpack-boilerplate-one-eleven/blob/master/examples/landscape-landfill.js" target="_blank">samples folder</a>.
     <p>Return to <a href="/">Project Home</a>.</p>
 </body>
