--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Feel free to follow <a href="https://twitter.com/an0n_tez" target="_blank">that account</a> too, it will be more up-to-date than this website.</p>
     <p>There is an <a href="/sdk">SDK/FXHash template</a> available to make it easy to embed One Eleven into a project.</p>
     <p>&nbsp;</p>
-    <h2>Official One Eleven releases (reverse chronologically)</h2>
+    <h2>Art links:</h2>
     <p>One Eleven (Landscape/Landfill): <a href="https://www.fxhash.xyz/generative/13830" target="_blank">Project #13830 on FXHash</a>.</p>
     <p>One Eleven (Defaced): <a href="https://www.fxhash.xyz/generative/13284" target="_blank">Project #13284 on FXHash</a>.</p>
     <p>One Eleven: <a href="https://www.fxhash.xyz/generative/12743" target="_blank">Project #12743 on FXHash</a>.</p>
