add are better than thirty

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p>There is an <a href="/sdk">SDK/FXHash template</a> available to make it easy to embed One Eleven into a project.</p>
     <p>&nbsp;</p>
     <h2>Installments, other works:</h2>
+    
+    <p>One Eleven (are Better Than Thirty): <a href="https://www.fxhash.xyz/generative/17878" target="_blank">Project #17878 on FXHash</a>.</p>
     <p>One Eleven (Landscape/Landfill): <a href="https://www.fxhash.xyz/generative/13830" target="_blank">Project #13830 on FXHash</a>.</p>
     <p>One Eleven (Defaced): <a href="https://www.fxhash.xyz/generative/13284" target="_blank">Project #13284 on FXHash</a>.</p>
     <p>One Eleven: <a href="https://www.fxhash.xyz/generative/12743" target="_blank">Project #12743 on FXHash</a>.</p>
